# e2e-agentic-data-prototyping

./: .gitignore  dagger_fruitshop_pipeline.py  dlt_agent_container_entry.py  dlt_agent_sandbox.py  dlt_agent_sandbox_with_api.py  pyproject.toml  readme.md  test_dlt_in_memory.py
.agents/skills/clean-specs-plans-status-sync/: SKILL.md
.agents/skills/dagger-python-sdk/: SKILL.md
.agents/skills/dagger-python-sdk/references/: CONTAINER_API.md  EXAMPLES.md  LLM_AND_AGENTS.md  MODULES_AND_OBJECTS.md  (+2 more)
.agents/skills/design-artifact-naming/: SKILL.md
.agents/skills/executing-plans/: SKILL.md
.agents/skills/modal-guide/: SKILL.md
.agents/skills/modal-remote-functions/: SKILL.md
.agents/skills/plan-writing/: SKILL.md
.agents/skills/spec-writing/: SKILL.md  spec-document-reviewer-prompt.md
.agents/skills/subagent-driven-development/: SKILL.md
.claude/rules/: data-exploration-workflow.md  rest-api-pipeline-workflow.md
.claude/skills/build-notebook/: SKILL.md
.claude/skills/explore-data/: SKILL.md
.dlt/: .toolkits
dlt_datagen_module/: dagger.json
dlt_datagen_module/src/dlt_datagen/: __init__.py  load.py  main.py
fruitshop_module/: dagger.json  pyproject.toml
fruitshop_module/src/fruitshop/: __init__.py  load_shop.py  main.py
local/: dlt_agent_sandbox_with_api.py  pyproject.toml  readme.md  source.py
local/dlt_datagen_module/: pyproject.toml
sandbox/: dlt_agent_container_entry.py  dlt_agent_sandbox_with_modal.py  pyproject.toml  readme.md  source.py
sandbox/design/: plan.md  prompt.md  spec.md
sandbox/dlt_datagen_module/: pyproject.toml
(+12 files in other folders)
